--- a/contract.html
+++ b/contract.html
@@ -55,7 +55,7 @@
     display: flex;
     justify-content: flex-start;
     font-size: 16px;
-    font-weight: bold;
+    font-weight: normal;
     margin: 8px 0;
     gap: 1%;
     }
