--- a/quotation.html
+++ b/quotation.html
@@ -153,6 +153,10 @@
       body {
         font-family: 'Nunito', sans-serif;
       }
+      table {
+      width: 100%;
+      border-collapse: collapse;
+         }
        .button-group {
       display: none !important;
     }
