--- a/quotation.html
+++ b/quotation.html
@@ -259,8 +259,8 @@
   <span>Company</span>
   <span>: <span id="company-name"></span></span>
   </div>  
-  <p style="margin-bottom: 0px;">Company Address</p>  
-  <p style="margin-top: 0px;" id="company-address";></p>
+  <p style="margin-bottom: 0px; font-size: 12px;">Company Address</p>  
+  <p style="margin-top: 0px; font-size: 12px;" id="company-address";></p>
   <div class="label-row">
   <span>Quotation Number</span>
   <span>: <span id="quote-number"></span></span>
