--- a/quotation.html
+++ b/quotation.html
@@ -185,6 +185,7 @@
       }
       table {
       border-collapse: collapse;
+      line-height: 1.8;
          }
        .button-group {
       display: none !important;
