--- a/contract.html
+++ b/contract.html
@@ -99,6 +99,25 @@
     width: 80px;  /* Atur agar semua label panjangnya sama */
     text-align: left;
     }
+    #signature-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end; /* Semua konten signature ke kanan */
+  }
+    #signature-pad {
+    width: 300px;
+    height: 150px;
+    border: 1px solid #000;
+    margin-bottom: 10px;
+  }
+
+  .button-group button {
+    margin: 5px;
+  }
+
+  #saved-signature {
+    flex: 1;
+  }
 
   </style>
 </head>
@@ -200,6 +219,17 @@
   <p>
   These Contract Agreement is formed from the agreed quotation from Tenant Party and Rental Party. By signing every page Tenant Party is deemed to have read and agreed with everything which written therein.
   </p>
+  <div id="signature-container">
+  <canvas id="signature-pad" class="signature-pad"></canvas>
+  <div class="button-group">
+    <button onclick="clearSignature()">Clear</button>
+    <button onclick="saveSignature()">Save</button>
+    <input type="file" id="upload-signature" accept="image/*" style="display: none;" onchange="handleUpload(event)">
+    <button onclick="document.getElementById('upload-signature').click()">Upload Signature</button>
+
+    <button onclick="window.print()">Print</button>
+  </div>
+  <div id="saved-signature"></div>
   </div>
   
 
@@ -298,45 +328,96 @@ const textAmount = toTitleCase(textAmountRaw);
     document.getElementById("account-number").innerText                   = accountNumber;
     document.getElementById("np-wp").innerText                            = npwp;
 
-if (!termin2 && !total2 && !terminDate2) {
-  const terminBlock = document.querySelector(".label-termin");
-  if (terminBlock) {
-    terminBlock.style.display = "none";
-  }
-} else {
-  // Hanya isi nilai jika parameter ada
-  if (termin2) {
-    document.getElementById("termin-2").innerText = termin2 + "%";
+    const canvas = document.getElementById("signature-pad");
+  const ctx = canvas.getContext("2d");
+  let drawing = false;
+
+  function resizeCanvas() {
+    const ratio = window.devicePixelRatio || 1;
+    canvas.width = canvas.offsetWidth * ratio;
+    canvas.height = canvas.offsetHeight * ratio;
+    ctx.scale(ratio, ratio);
+    ctx.lineWidth = 2;
+    ctx.lineJoin = "round";
+    ctx.lineCap = "round";
+    ctx.strokeStyle = "#000";
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
   }
 
-  if (total2) {
-    document.getElementById("total-2").innerText = formatRupiah(total2);
+  window.addEventListener("resize", resizeCanvas);
+  resizeCanvas();
+
+  function getXY(e) {
+    const rect = canvas.getBoundingClientRect();
+    const clientX = e.touches ? e.touches[0].clientX : e.clientX;
+    const clientY = e.touches ? e.touches[0].clientY : e.clientY;
+    return {
+      x: clientX - rect.left,
+      y: clientY - rect.top
+    };
   }
 
-  if (terminDate2) {
-    document.getElementById("termin-date-2").innerText = terminDate2;
-  }
-}
-    
-    if (!termin3 && !total3 && !terminDate3) {
-  const terminBlock = document.querySelector(".label-termin");
-  if (terminBlock) {
-    terminBlock.style.display = "none";
-  }
-} else {
-  // Hanya isi nilai jika parameter ada
-  if (termin3) {
-    document.getElementById("termin-3").innerText = termin3 + "%";
+  function startDraw(e) {
+    drawing = true;
+    const { x, y } = getXY(e);
+    ctx.beginPath();
+    ctx.moveTo(x, y);
+    e.preventDefault();
   }
 
-  if (total3) {
-    document.getElementById("total-3").innerText = formatRupiah(total3);
+  function draw(e) {
+    if (!drawing) return;
+    const { x, y } = getXY(e);
+    ctx.lineTo(x, y);
+    ctx.stroke();
+    e.preventDefault();
   }
 
-  if (terminDate3) {
-    document.getElementById("termin-date-3").innerText = terminDate3;
+  function endDraw() {
+    drawing = false;
   }
-}
+
+  canvas.addEventListener("mousedown", startDraw);
+  canvas.addEventListener("mousemove", draw);
+  canvas.addEventListener("mouseup", endDraw);
+  canvas.addEventListener("mouseleave", endDraw);
+
+  canvas.addEventListener("touchstart", startDraw);
+  canvas.addEventListener("touchmove", draw);
+  canvas.addEventListener("touchend", endDraw);
+
+  function clearSignature() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    document.getElementById("saved-signature").innerHTML = "";
+  }
+
+  function saveSignature() {
+    const dataURL = canvas.toDataURL("image/png");
+    const img = document.createElement("img");
+    img.src = dataURL;
+    img.style.maxWidth = "100px";
+    img.style.marginTop = "0px";
+
+    document.getElementById('saved-signature').innerHTML = "";
+    document.getElementById("saved-signature").appendChild(img);
+    // Misal ada variabel isSigned = true kalau sudah tanda tangan
+  }
+    function handleUpload(event) {
+    const file = event.target.files[0];
+    if (!file) return;
+
+    const reader = new FileReader();
+    reader.onload = function(e) {
+      const img = document.createElement("img");
+      img.src = e.target.result;
+      img.style.maxWidth = "200px";
+      img.style.marginTop = "0px";
+
+      document.getElementById('saved-signature').innerHTML = "";
+      document.getElementById("saved-signature").appendChild(img);
+    };
+    reader.readAsDataURL(file);
+  }
   </script>
 
 </body>
