--- a/contract.html
+++ b/contract.html
@@ -257,32 +257,26 @@
     const accountNumber   = urlParams.get("accountNumber") || "";
     const npwp            = urlParams.get("npwp") || "";
     
-window.onload = function() {
-    function hideIfEmpty(terminNumber) {
-      const terminId = `termin-${terminNumber}`;
-      const totalId = `total-${terminNumber}`;
-      const dateId = `termin-date-${terminNumber}`;
+function hideIfInvalid(idList, parentSelector) {
+    // Jika semua elemen memiliki value yang TIDAK valid, maka sembunyikan
+    const isAllInvalid = idList.every(id => {
+      const el = document.getElementById(id);
+      const value = el?.textContent?.trim();
 
-      const termin = document.getElementById(terminId)?.textContent.trim();
-      const total = document.getElementById(totalId)?.textContent.trim();
-      const date = document.getElementById(dateId)?.textContent.trim();
+      // Cek jika kosong, mengandung [placeholder], atau RpNaN/NaN
+      return !value || value.includes("[") || value === "NaN" || value === "RpNaN";
+    });
 
-      const isTerminEmpty = !termin || termin.includes("[");
-      const isTotalEmpty = !total || total === "RpNaN" || total.includes("[");
-      const isDateEmpty = !date || date.includes("[") || date === "";
-
-      if (isTerminEmpty && isTotalEmpty && isDateEmpty) {
-        const allTerminDivs = document.querySelectorAll('.label-termin');
-        const index = terminNumber - 1; // karena index dimulai dari 0
-        if (allTerminDivs[index]) {
-          allTerminDivs[index].style.display = "none";
-        }
-      }
+    if (isAllInvalid) {
+      const parentDiv = document.querySelector(parentSelector);
+      if (parentDiv) parentDiv.style.display = "none";
     }
+  }
 
-    // Hanya hide Termin 3 (biarkan Termin 1 dan 2 muncul selama datanya valid)
-    hideIfEmpty(3);
-  };
+  // Hanya sembunyikan jika seluruh data dalam termin tersebut tidak valid
+  hideIfInvalid(["termin-3", "total-3", "termin-date-3"], ".label-termin:nth-of-type(3)");
+  hideIfInvalid(["termin-2", "total-2", "termin-date-2"], ".label-termin:nth-of-type(2)");
+  hideIfInvalid(["termin-1", "total-1", "termin-date-1"], ".label-termin:nth-of-type(1)");
     
     function numberToWords(num) {
       const angka = ["", "One", "Two", "Three", "Four", "Five", "Six", "Seven", "Eight", "Nine"];
