--- a/contract.html
+++ b/contract.html
@@ -257,26 +257,28 @@
     const accountNumber   = urlParams.get("accountNumber") || "";
     const npwp            = urlParams.get("npwp") || "";
     
-function hideIfInvalid(idList, parentSelector) {
-    // Jika semua elemen memiliki value yang TIDAK valid, maka sembunyikan
-    const isAllInvalid = idList.every(id => {
+function hideIfValid(idList, parentSelector) {
+    const isAllValid = idList.every(id => {
       const el = document.getElementById(id);
       const value = el?.textContent?.trim();
 
-      // Cek jika kosong, mengandung [placeholder], atau RpNaN/NaN
-      return !value || value.includes("[") || value === "NaN" || value === "RpNaN";
+      // Anggap valid jika:
+      // - Tidak kosong
+      // - Tidak mengandung [
+      // - Tidak mengandung NaN
+      return value && !value.includes("[") && value !== "NaN" && value !== "RpNaN";
     });
 
-    if (isAllInvalid) {
+    if (isAllValid) {
       const parentDiv = document.querySelector(parentSelector);
       if (parentDiv) parentDiv.style.display = "none";
     }
   }
 
-  // Hanya sembunyikan jika seluruh data dalam termin tersebut tidak valid
-  hideIfInvalid(["termin-3", "total-3", "termin-date-3"], ".label-termin:nth-of-type(3)");
-  hideIfInvalid(["termin-2", "total-2", "termin-date-2"], ".label-termin:nth-of-type(2)");
-  hideIfInvalid(["termin-1", "total-1", "termin-date-1"], ".label-termin:nth-of-type(1)");
+  // Sekarang justru menyembunyikan jika datanya valid
+  hideIfValid(["termin-3", "total-3", "termin-date-3"], ".label-termin:nth-of-type(3)");
+  hideIfValid(["termin-2", "total-2", "termin-date-2"], ".label-termin:nth-of-type(2)");
+  hideIfValid(["termin-1", "total-1", "termin-date-1"], ".label-termin:nth-of-type(1)");
     
     function numberToWords(num) {
       const angka = ["", "One", "Two", "Three", "Four", "Five", "Six", "Seven", "Eight", "Nine"];
