--- a/contract.html
+++ b/contract.html
@@ -257,28 +257,36 @@
     const accountNumber   = urlParams.get("accountNumber") || "";
     const npwp            = urlParams.get("npwp") || "";
     
-function hideIfValid(idList, parentSelector) {
-    const isAllValid = idList.every(id => {
+ function hideIfEmpty(idList, parentSelector) {
+    let isEmpty = idList.every(id => {
       const el = document.getElementById(id);
       const value = el?.textContent?.trim();
-
-      // Anggap valid jika:
-      // - Tidak kosong
-      // - Tidak mengandung [
-      // - Tidak mengandung NaN
-      return value && !value.includes("[");
+      return !value || value === "NaN" || value.includes("[") || value === "RpNaN";
     });
 
-    if (isAllValid) {
+    if (isEmpty) {
       const parentDiv = document.querySelector(parentSelector);
-      if (parentDiv) parentDiv.style.display = "none";
+      if (parentDiv) parentDiv.style.display = "yes";
     }
   }
 
-  // Sekarang justru menyembunyikan jika datanya valid
-  hideIfValid(["termin-3", "total-3", "termin-date-3"], ".label-termin:nth-of-type(3)");
-  hideIfValid(["termin-2", "total-2", "termin-date-2"], ".label-termin:nth-of-type(2)");
-  hideIfValid(["termin-1", "total-1", "termin-date-1"], ".label-termin:nth-of-type(1)");
+  // Hide Termin 3 if data is empty
+  hideIfEmpty(
+    ["termin-3", "total-3", "termin-date-3"],
+    ".label-termin:nth-of-type(3)"
+  );
+
+  // Opsional: jika kamu ingin juga menyembunyikan Termin 2 jika kosong
+  hideIfEmpty(
+    ["termin-2", "total-2", "termin-date-2"],
+    ".label-termin:nth-of-type(2)"
+  );
+
+  // dan untuk Termin 1 juga
+  hideIfEmpty(
+    ["termin-1", "total-1", "termin-date-1"],
+    ".label-termin:nth-of-type(1)"
+  );
     
     function numberToWords(num) {
       const angka = ["", "One", "Two", "Three", "Four", "Five", "Six", "Seven", "Eight", "Nine"];
