--- a/contract.html
+++ b/contract.html
@@ -266,7 +266,7 @@
 
     if (isEmpty) {
       const parentDiv = document.querySelector(parentSelector);
-      if (parentDiv) parentDiv.style.display = "yes";
+      if (parentDiv) parentDiv.style.display = "none";
     }
   }
 
