--- a/contract.html
+++ b/contract.html
@@ -118,6 +118,10 @@
   #saved-signature {
     flex: 1;
   }
+  @mediaprint {
+     #signature-pad {
+   display: !important none;
+  }
 
   </style>
 </head>
@@ -153,10 +157,7 @@
   <span>Termin 2 (<strong style="font-weight: normal;"><span id="termin-2">[Termin 2]</span></strong>)</span>
   <span>: <span><strong><span id="total-2">[Total 2]</span></strong> ( Payment due date on <strong style="font-weight: normal;"><span id="termin-date-2">[Termin Date 2]</span></strong> )</span></span>
   </div> 
-  <div class="label-termin">
-  <span>Termin 3 (<strong style="font-weight: normal;"><span id="termin-3">[Termin 3]</span></strong>)</span>
-  <span>: <span><strong><span id="total-3">[Total 3]</span></strong> ( Payment due date on <strong style="font-weight: normal;"><span id="termin-date-3">[Termin Date 3]</span></strong> )</span></span>
-  </div> 
+ 
 
   <p>
   Payment above transfer to : 
@@ -219,6 +220,7 @@
   <p>
   These Contract Agreement is formed from the agreed quotation from Tenant Party and Rental Party. By signing every page Tenant Party is deemed to have read and agreed with everything which written therein.
   </p>
+  <p style="text-align: right;">Regards,</p>
   <div id="signature-container">
   <canvas id="signature-pad" class="signature-pad"></canvas>
   <div class="button-group">
@@ -226,12 +228,11 @@
     <button onclick="saveSignature()">Save</button>
     <input type="file" id="upload-signature" accept="image/*" style="display: none;" onchange="handleUpload(event)">
     <button onclick="document.getElementById('upload-signature').click()">Upload Signature</button>
-
     <button onclick="window.print()">Print</button>
   </div>
   <div id="saved-signature"></div>
   </div>
-  
+  <p style="text-align: right;">Sandi Samudra</p>
 
   
   <script>
