--- a/contract.html
+++ b/contract.html
@@ -36,6 +36,8 @@
       .no-print {
         display: none !important;
       }
+       #signature-pad {
+   display: none !important;
     }
 
     h1, h2, h3, h4 {
@@ -118,11 +120,8 @@
   #saved-signature {
     flex: 1;
   }
-  @mediaprint {
-     #signature-pad {
-   display: !important none;
-  }
-
+  
+    
   </style>
 </head>
 <body>
