--- a/contract.html
+++ b/contract.html
@@ -36,7 +36,7 @@
       .no-print {
         display: none !important;
       }
-       #signature-pad {
+       #signature-pad, .button-group {
    display: none !important;
     }
 
