--- a/contract.html
+++ b/contract.html
@@ -39,6 +39,15 @@
        #signature-pad, .button-group {
    display: none !important;
     }
+       .container {
+      max-width: 800px;
+      margin: auto;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    }
 
     h1, h2, h3, h4 {
       margin: 0;
