--- a/contract.html
+++ b/contract.html
@@ -40,12 +40,13 @@
    display: none !important;
     }
        .container {
-      max-width: 800px;
-      margin: auto;
       background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    box-shadow: none !important;
+    border: none !important;
+    border-radius: 0 !important;
+    outline: none !important;
+    margin: auto;
+    padding: auto;
     }
     }
 
