--- a/contract.html
+++ b/contract.html
@@ -26,6 +26,9 @@
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
+    p {
+      text-align: justify;
+    }
 
     @media print {
       body {
