--- a/contract.html
+++ b/contract.html
@@ -51,6 +51,14 @@
     margin: auto;
     padding: auto;
     }
+      .label-row span:first-child {
+    width: 100px;  /* Atur agar semua label panjangnya sama */
+    text-align: left;
+    }
+      .label-termin span:first-child {
+    width: 100px;  /* Atur agar semua label panjangnya sama */
+    text-align: left;
+    }
     }
 
     h1, h2, h3, h4 {
