--- a/contract.html
+++ b/contract.html
@@ -51,9 +51,25 @@
     margin: auto;
     padding: auto;
     }
+      .label-row {
+    display: flex;
+    justify-content: flex-start;
+    font-size: 16px;
+    font-weight: normal;
+    margin: 8px 0;
+    gap: 1%;
+    }
       .label-row span:first-child {
     width: 80px;  /* Atur agar semua label panjangnya sama */
     text-align: left;
+    }
+      .label-termin {
+    display: flex;
+    justify-content: flex-start;
+    font-size: 16px;
+    font-weight: normal;
+    margin: 8px 0;
+    gap: 1%;
     }
       .label-termin span:first-child {
     width: 80px;  /* Atur agar semua label panjangnya sama */
