--- a/contract.html
+++ b/contract.html
@@ -33,7 +33,7 @@
     @media print {
       body {
         margin: 0;
-        padding: 20mm;
+        padding: 40px;
       }
 
       .no-print {
@@ -52,15 +52,6 @@
     padding: auto;
     }
       
-      .label-row span:first-child {
-    width: 50px;  /* Atur agar semua label panjangnya sama */
-    text-align: left;
-    }
-     
-      .label-termin span:first-child {
-    width: 50px;  /* Atur agar semua label panjangnya sama */
-    text-align: left;
-    }
     }
 
     h1, h2, h3, h4 {
@@ -85,7 +76,7 @@
     gap: 1%;
     }
     .label-row span:first-child {
-    width: 200px;  /* Atur agar semua label panjangnya sama */
+    width: 100px;  /* Atur agar semua label panjangnya sama */
     text-align: left;
     }
      .label-termin {
@@ -97,7 +88,7 @@
     gap: 1%;
     }
     .label-termin span:first-child {
-    width: 150px;  /* Atur agar semua label panjangnya sama */
+    width: 100px;  /* Atur agar semua label panjangnya sama */
     text-align: left;
     }
     .label-paragraf1 {
