--- a/contract.html
+++ b/contract.html
@@ -234,7 +234,7 @@
   <p>
   These Contract Agreement is formed from the agreed quotation from Tenant Party and Rental Party. By signing every page Tenant Party is deemed to have read and agreed with everything which written therein.
   </p>
-  <p style="text-align: right;">Regards,</p>
+  <strong style="text-align: left;">Tenant Party</strong> <p style="text-align: right;">Regards,</p>
   <div id="signature-container">
   <canvas id="signature-pad" class="signature-pad"></canvas>
   <div class="button-group">
@@ -246,22 +246,8 @@
   </div>
   <div id="saved-signature"></div>
   </div>
-  <p style="text-align: right;">Sandi Samudra</p>
+  <strong style="text-align: left;" id="client-name">Pihak Kedua</strong> <p style="text-align: right;">Sandi Samudra</p>
 
-  <div id="left-signature-container" style="display: flex; flex-direction: column; align-items: flex-start; margin-top: 30px;">
-  <canvas id="left-signature-pad" class="signature-pad" style="width: 300px; height: 150px; border: 1px solid #000; margin-bottom: 10px;"></canvas>
-  <div class="button-group">
-    <button onclick="clearLeftSignature()">Clear</button>
-    <button onclick="saveLeftSignature()">Save</button>
-    <input type="file" id="upload-left-signature" accept="image/*" style="display: none;" onchange="handleLeftUpload(event)">
-    <button onclick="document.getElementById('upload-left-signature').click()">Upload Signature</button>
-  </div>
-  <div id="saved-left-signature"></div>
-  <p style="text-align: left;" id="client-name">Pihak Kedua</p>
-</div>
-
-
-  
   <script>
     const urlParams       = new URLSearchParams(window.location.search);
     const projectName     = urlParams.get("projectName") || "";
