--- a/contract.html
+++ b/contract.html
@@ -234,7 +234,7 @@
   <p>
   These Contract Agreement is formed from the agreed quotation from Tenant Party and Rental Party. By signing every page Tenant Party is deemed to have read and agreed with everything which written therein.
   </p>
-  <strong style="align-items: flex-start;"><span>Tenant Party</span></strong> <p style="text-align: right;">Regards,</p>
+  <strong style="align-items: flex-start;"><span>Tenant Party</span></strong> <strong style="align-items: flex-end;"><span>Regards,</span></strong>
   <div id="signature-container">
   <canvas id="signature-pad" class="signature-pad"></canvas>
   <div class="button-group">
@@ -246,7 +246,7 @@
   </div>
   <div id="saved-signature"></div>
   </div>
-  <strong style="align-items: flex-start;" id="client-name"><span>Pihak Kedua</span></strong> <p style="text-align: right;">Sandi Samudra</p>
+  <strong style="align-items: flex-start;" id="client-name"><span>Pihak Kedua</span></strong> <strong style="align-items: flex-end;"><span>Sandi Samudra</span></strong>
 
   <script>
     const urlParams       = new URLSearchParams(window.location.search);
