--- a/contract.html
+++ b/contract.html
@@ -239,7 +239,7 @@
   These Contract Agreement is formed from the agreed quotation from Tenant Party and Rental Party. By signing every page Tenant Party is deemed to have read and agreed with everything which written therein.
   </p>
   <div id="signature-place">  
-  <strong style="align-items: flex-start;"><span>Tenant Party</span></strong> <strong style="align-items: flex-end;"><span>Regards,</span></strong>
+  <strong style="text-align: left;"><span>Tenant Party</span></strong> <strong style="text-align: right;"><span>Regards,</span></strong>
   </div>
   <div id="signature-container">
   <canvas id="signature-pad" class="signature-pad"></canvas>
@@ -253,7 +253,7 @@
   <div id="saved-signature"></div>
   </div>
   <div id="signature-place">
-  <strong style="align-items: flex-start;" id="client-name"><span>Pihak Kedua</span></strong> <strong style="align-items: flex-end;"><span>Sandi Samudra</span></strong>
+  <strong style="text-align: left;" id="client-name"><span>Pihak Kedua</span></strong> <strong style="text-align: right;"><span>Sandi Samudra</span></strong>
   </div>
   <script>
     const urlParams       = new URLSearchParams(window.location.search);
