--- a/contract.html
+++ b/contract.html
@@ -234,6 +234,18 @@
   <p>
   These Contract Agreement is formed from the agreed quotation from Tenant Party and Rental Party. By signing every page Tenant Party is deemed to have read and agreed with everything which written therein.
   </p>
+
+  <div style="display: flex; justify-content: space-between; margin-top: 50px;">
+  <div style="text-align: center;">
+    <div style="border-top: 1px solid #000; width: 200px; margin-bottom: 5px;"></div>
+    <p>Pihak Pertama</p>
+  </div>
+  <div style="text-align: center;">
+    <div style="border-top: 1px solid #000; width: 200px; margin-bottom: 5px;"></div>
+    <p>Pihak Kedua</p>
+  </div>
+</div>
+
     
   <strong style="text-align: left;"><span>Tenant Party</span></strong><strong style="text-align: right;">Regards,</strong>
     
