--- a/contract.html
+++ b/contract.html
@@ -247,7 +247,7 @@
 </div>
 
     
-  <strong style="text-align: left;"><span>Tenant Party</span></strong><strong style="text-align: right;">Regards,</strong>
+  <p style="text-align: right;">Regards,</p>
     
   <div id="signature-container">
   <canvas id="signature-pad" class="signature-pad"></canvas>
@@ -260,8 +260,17 @@
   </div>
   <div id="saved-signature"></div>
   </div>
+  <div style="display: flex; justify-content: space-between; margin-top: 50px;">
+  <div style="text-align: center;">
+    <div style="border-top: 1px solid #000; width: 200px; margin-bottom: 5px;"></div>
+    <p style="text-align: left;" id="client-name">Pihak Pertama</p>
+  </div>
+  <div style="text-align: center;">
+    <div style="border-top: 1px solid #000; width: 200px; margin-bottom: 5px;"></div>
+    <p>Sandi Samudra</p>
+  </div>
+</div>
 
-  <strong style="text-align: left;" id="client-name"><span>Pihak Kedua</span></strong><strong style="text-align: right;">Sandi Samudra</strong>
 
   <script>
     const urlParams       = new URLSearchParams(window.location.search);
