--- a/contract.html
+++ b/contract.html
@@ -236,18 +236,9 @@
   </p>
 
   <div style="display: flex; justify-content: space-between; margin-top: 50px;">
-  <div style="text-align: center;">
-    <div style="border-top: 1px solid #000; width: 200px; margin-bottom: 5px;"></div>
-    <p>Pihak Pertama</p>
+  <p style="text-align: left;">Tenant Party</p>
+  <p style="text-align: right;">Rental Party</p>
   </div>
-  <div style="text-align: center;">
-    <div style="border-top: 1px solid #000; width: 200px; margin-bottom: 5px;"></div>
-    <p>Pihak Kedua</p>
-  </div>
-</div>
-
-    
-  <p style="text-align: right;">Regards,</p>
     
   <div id="signature-container">
   <canvas id="signature-pad" class="signature-pad"></canvas>
