--- a/contract.html
+++ b/contract.html
@@ -258,7 +258,7 @@
   </div>
   <div style="text-align: center;">
     <div style="border-top: 1px solid #000; width: 200px; margin-bottom: 5px;"></div>
-    <p>Sandi Samudra</p>
+    <p style="text-align: right;">Sandi Samudra</p>
   </div>
 </div>
 
