--- a/contract.html
+++ b/contract.html
@@ -254,11 +254,11 @@
   <div style="display: flex; justify-content: space-between; margin-top: 10px;">
   <div style="text-align: center;">
     <div style="border-top: 1px solid #000; width: 200px; margin-bottom: 5px;"></div>
-    <p style="text-align: left;" id="client-name">Pihak Pertama</p>
+    <p style="text-align: left; margin-top: 2px;" id="client-name">Pihak Pertama</p>
   </div>
   <div style="text-align: center;">
     <div style="border-top: 1px solid #000; width: 200px; margin-bottom: 5px;"></div>
-    <p style="text-align: right;">Sandi Samudra</p>
+    <p style="text-align: right; margin-top: 2px;">Sandi Samudra</p>
   </div>
 </div>
 
