--- a/contract.html
+++ b/contract.html
@@ -171,7 +171,8 @@
   <span>Termin 2 (<strong style="font-weight: normal;"><span id="termin-2">[Termin 2]</span></strong>)</span>
   <span>: <span><strong><span id="total-2">[Total 2]</span></strong> ( Payment due date on <strong style="font-weight: normal;"><span id="termin-date-2">[Termin Date 2]</span></strong> )</span></span>
   </div> 
- 
+
+  <div id="payment-terms"></div>
 
   <p>
   Payment above transfer to : 
@@ -264,6 +265,24 @@
 
 
   <script>
+
+  const termins = [];
+
+  if (params.get("t1")) termins.push({ label: "Termin 1", value: params.get("t1") });
+  if (params.get("t2")) termins.push({ label: "Termin 2", value: params.get("t2") });
+  if (params.get("t3")) termins.push({ label: "Termin 3", value: params.get("t3") });
+
+  // Jika hanya full payment
+  if (params.get("full")) termins.push({ label: "Full Payment", value: params.get("full") });
+
+  // Render
+  const container = document.getElementById("payment-terms");
+  termins.forEach(t => {
+    const div = document.createElement("div");
+    div.innerText = `${t.label} : ${t.value}%`;
+    container.appendChild(div);
+  });
+    
     const urlParams       = new URLSearchParams(window.location.search);
     const projectName     = urlParams.get("projectName") || "";
     const productionHouse = urlParams.get("productionHouse") || "";
