--- a/contract.html
+++ b/contract.html
@@ -164,13 +164,18 @@
   </p>
 
   <div class="label-termin">
-  <span>Termin 1 (<strong style="font-weight: normal;"><span id="termin-1">[Termin 1]</span></strong>)</span>
+  <span>Termin 1 (<strong style="font-weight: normal;"><span id="t1">[Termin 1]</span></strong>)</span>
   <span>: <span><strong><span id="total-1">[Total 1]</span></strong> ( Payment due date on <strong style="font-weight: normal;"><span id="termin-date-1">[Termin Date 1]</span></strong> )</span></span>
   </div> 
   <div class="label-termin">
-  <span>Termin 2 (<strong style="font-weight: normal;"><span id="termin-2">[Termin 2]</span></strong>)</span>
+  <span>Termin 2 (<strong style="font-weight: normal;"><span id="t2">[Termin 2]</span></strong>)</span>
   <span>: <span><strong><span id="total-2">[Total 2]</span></strong> ( Payment due date on <strong style="font-weight: normal;"><span id="termin-date-2">[Termin Date 2]</span></strong> )</span></span>
   </div> 
+    <div class="label-termin">
+  <span>Termin 3 (<strong style="font-weight: normal;"><span id="t3">[Termin 2]</span></strong>)</span>
+  <span>: <span><strong><span id="total-3">[Total 3]</span></strong> ( Payment due date on <strong style="font-weight: normal;"><span id="termin-date-2">[Termin Date 3]</span></strong> )</span></span>
+  </div> 
+    
 
   <div id="payment-terms"></div>
 
