--- a/contract.html
+++ b/contract.html
@@ -354,8 +354,8 @@ const textAmount = toTitleCase(textAmountRaw);
     document.getElementById("np-wp").innerText                            = npwp;
     document.getElementById("client-name").innerText                      = clientName;
     document.getElementById("rental-name").innerText                      = rentalName;
-    document.getElementById("termin-1").innerText                         = termin1 + %;
-    document.getElementById("termin-2").innerText                         = termin2 + %;
+    document.getElementById("termin-1").innerText                         = termin1 + "%";
+    document.getElementById("termin-2").innerText                         = termin2 + "%";
    
 
   const canvas = document.getElementById("signature-pad");
