--- a/quotation.html
+++ b/quotation.html
@@ -346,7 +346,7 @@
     const quoteNumber = urlParams.get("quoteNumber") || "";
     const user = urlParams.get("user") || "";
     const orders = urlParams.get("orders") || "";
-    const guardOrders = decodeURIComponent(urlParams.get("guardorders") || "");
+    const guardOrders = decodeURIComponent(decodeURIComponent(urlParams.get("guardorders") || ""));
     const categoryList = urlParams.get("category")?.split("||") || [];
     const totalcostorders = urlParams.get("totalcostorders") || "";
     const totalcostGO = urlParams.get("totalcostGO") || "";
