--- a/invoice.html
+++ b/invoice.html
@@ -220,7 +220,7 @@
   
     <div style="font-size: 12px; font-style: italic; margin-top: 0px; margin-bottom: 30px;" class="note" id="grand-total-text"></div>
 
-  <p style="font-weight: bold; font-size: 15px; margin-bottom: 0px;">Transfer To</p>  
+  <p style="font-weight: bold; font-size: 15px; margin-bottom: 0px; margin-top: 10px;">Transfer To</p>  
   <div class="label-row">
   <span>Bank Name</span>
   <span>: <span id="bank-name"></span></span>
