--- a/invoice.html
+++ b/invoice.html
@@ -246,8 +246,8 @@
   </div>
   <div id="saved-signature"></div>
   
-  <p style="font-weight: normal; font-size: 15px;"id="username"></p>
-  <p style="margin-top: 0px; font-weight: bold; font-size: 15px;">PT Warna Global Surya</p>
+  <p style="font-weight: normal; margin-bottom: 0; font-size: 15px;"id="username"></p>
+  <p style="font-weight: bold; font-size: 15px;">PT Warna Global Surya</p>
   </div>
 
   <script>
