--- a/invoice.html
+++ b/invoice.html
@@ -247,7 +247,7 @@
   <div id="saved-signature"></div>
   
   <p style="font-weight: normal; margin-bottom: 0px; font-size: 15px;"id="username"></p>
-  <p style="font-weight: bold; font-size: 15px;">PT Warna Global Surya</p>
+  <p style="margin-bottom: 0px; margin-top: 0px; font-weight: bold; font-size: 15px;">PT Warna Global Surya</p>
   </div>
 
   <script>
